--- a/index.html
+++ b/index.html
@@ -5,16 +5,32 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>git-flow</title>
 		<style>
+			header {
+				font-size: 2rem;
+				font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+				padding: 1rem;
+				background-color: papayawhip;
+			}
+			.header-title {
+				max-width: 568px;
+				margin: 0 auto;
+			}
 			main {
 				outline: 1px solid gray;
 				max-width: 568px;
-				margin: 0 auto;
+				margin: 2rem auto;
 				padding: 1rem;
 			}
 		</style>
 	</head>
 
 	<body>
+		<header>
+			<div class="header-title">
+				<span>Continuous Integration</span>
+			</div>
+		</header>
+
 		<main>
 			<h1>git-flow</h1>
 
