--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
 				margin: 0 auto;
 				padding: 1rem;
 			}
+			footer {
+				padding: 1rem;
+				background-color: lightgrey;
+			}
+			.d-block {
+				max-width: 568px;
+				margin: 0 auto;
+				display: block;
+				text-align: center;
+			}
 		</style>
 	</head>
 
@@ -20,5 +30,9 @@
 
 			<p>Header & Footer will be continuosuly integrated as separate feature branches to develop</p>
 		</main>
+
+		<footer>
+			<span class="d-block">This is the footer</span>
+		</footer>
 	</body>
 </html>
